Bug 104922 - in "Text Grid" tab page in Page style, maximum "lines per page" and "characters per line" are set to 154 and 233 respectively when the values given by users are over those values
Summary: in "Text Grid" tab page in Page style, maximum "lines per page" and "characte...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords:
Depends on:
Blocks: Text-Grid
  Show dependency treegraph
 
Reported: 2016-12-25 11:06 UTC by himajin100000
Modified: 2019-06-05 09:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description himajin100000 2016-12-25 11:06:41 UTC
A christmas present for you, developers: a bug report.
I know developers love bug reports and get crazy. I hope you like this one too.

STEPS TO REPRODUCE:

1. Run Writer
2. Select "Format" from the main menu and then Select "Page"
3. for this STEPS TO REPRODUCE, I've chosen "A4","Portrait" with all its margins 2cm for the page paper. This can be set at "Page" Tab
4. Click "Text Grid" Tab
5. Select "Grid(lines and characters)"
6. Take a look at the right side of "Grid Layout" section
7. Set "Max. base text size" to 2pt
8. Set "Max. Ruby text size" to 1pt
9. on the left side in "Grid Layout" section, you can confirm 

Lines per page [numeric updown control here] (1-242)
Characters per line [numeric updown control here] (1-240)

10. set both settings to their respective maximums.

Lines per page [242] (1-242)
Characters per line [240] (1-240)

11. press "OK" button to close the dialog
12. Select "Format" from the main menu and then Select "Page"
13. Click "Text Grid" Tab

14. Take a look at the left side of "Grid Layout" section again. 


ACTUAL RESULT:
What you will see is 

Lines per page [154] (1-242)
Characters per line [233] (1-233)

EXPECTED RESULT:
What you should see is 

Lines per page [242] (1-242)
Characters per line [240] (1-240)

values may be from
http://opengrok.libreoffice.org/xref/core/sw/uiconfig/swriter/ui/textgridpage.ui?r=64a708cba9b954afe3331f63c58218eb53b3d0ce#8
http://opengrok.libreoffice.org/xref/core/sw/uiconfig/swriter/ui/textgridpage.ui?r=64a708cba9b954afe3331f63c58218eb53b3d0ce#15
Comment 1 Buovjaga 2017-01-01 20:55:56 UTC
Repro.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: fc0d4e6bc43d5f982452df07930f5ecf5927ad22
CPU Threads: 8; OS Version: Linux 4.8; UI Render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on December 31st 2016
Comment 2 QA Administrators 2018-03-21 03:35:33 UTC Comment hidden (obsolete)
Comment 3 himajin100000 2018-03-21 07:54:29 UTC
still reproducible with 

Version: 6.1.0.0.alpha0+ (x64)
Build ID: e2b941fef3d0fb955c2528ea2d3f91f62685912e
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-03-20_01:57:15
Locale: en-US (ja_JP); Calc: CL
Comment 4 QA Administrators 2019-03-22 04:04:33 UTC Comment hidden (obsolete)
Comment 5 Mark Hung 2019-05-31 13:59:46 UTC
Reproducible with 6.2.3.2
 
版本:6.2.3.2 (x64)
組建 ID:aecc05fe267cc68dde00352a451aa867b3b546ac
CPU 執行緒:8; OS:Windows 10.0; UI 算繪:預設; VCL: win; 
語言地區:zh-TW (zh_TW); UI語言:zh-TW
Calc: threaded
Comment 6 Commit Notification 2019-06-04 04:45:10 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/c1c3a3c619bd596e2a64e2c9b9328b4adfa990eb%5E%21

tdf#104922 recover text grid setting properly.

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2019-06-05 09:31:07 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/595d28ab771c9acdfc613502a28486e4a85b38d7%5E%21

tdf#104922 recover text grid setting properly.

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.