tdf#104922 recover text grid setting properly.

Lines per page and chars per line can not be set before the
max values determined, otherwise we may get incorrect result
because of truncating to incorrect max values.

Change-Id: I9829af0dcfd744f4383a5f9034270b00fdfb15b8
Reviewed-on: https://gerrit.libreoffice.org/73280
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>
(cherry picked from commit c1c3a3c619bd596e2a64e2c9b9328b4adfa990eb)
Reviewed-on: https://gerrit.libreoffice.org/73458
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>